# D-ITAGS

./: .clang-format  .clang-format-ignore  .clang-tidy  .gitignore  CMakeLists.txt  README.md  codecov.yaml
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: auto-pr.yml  ci.yml  docker.yml  stale.yml
cmake/: CodeCoverage.cmake  DependencyGraph.cmake  FindGEOS.cmake  FindGUROBI.cmake  FindYAMLCPP.cmake  LinkTimeOptimization.cmake  Tools.cmake
docker/: connect.sh  fix_msgs.py  grstapse.dockerfile  run.sh
docker/configs/: tmux.conf
docs/: CMakeLists.txt  Doxyfile.in
experiments/Problems/: proof_survivor_domain.json  revised_base_survivor_domain.json  revised_base_survivor_domain_old.json
experiments/maps/: iros_map_full_buildings.pgm  iros_map_full_buildings.yaml  iros_map_part.pgm
experiments/python_scripts/: apr_bounds.py  breakdown_chart.py  comp_itags.py  ditags_problem_alt.py  generic_stats_graph.py  generic_stats_scatter.py  itags_new_old_problem_gen.py  itags_problem_generator.py  proof_scatter.py
hooks/: check_branch_name.py  clang_format.py  pre-commit  pre-rebase
hooks/clang_format/: __init__.py  clang_format_base.py  diff_utils.py  git_diff_format.py  hunk.py  partial_files_format.py  patch.py  patch_set.py  (+2 more)
include/: CMakeLists.txt
scripts/: brute_force_scheduling.py  clang_tidy.py  run-clang-tidy.py
src/: CMakeLists.txt  grstaps_problem_inputs.cpp  robot.cpp  species.cpp  task.cpp
tests/: CMakeLists.txt
tests/data/geometric_planning/environments/: pgm.json  pgm_dubins.json  point_graph.json  sampled_point_graph.json
tests/data/geometric_planning/mapf/: at_goal.json  circle.json  simple1.json  simple1b.json  swap2.json  swap4.json
tests/data/geometric_planning/maps/: aamas2022_scenario1.yaml  iros_map_full.pgm  iros_map_full.yaml  iros_map_part.yaml
tests/data/geometric_planning/ompl/: se2_goal_space.json  se2_goal_state.json  se2_space.json  se2_state.json  se3_goal_space.json  se3_goal_state.json  se3_space.json  se3_state.json
tests/data/grstaps_problem_inputs/: full_run.json  motion_planners.json  robots.json  species.json  task_associations.json  tasks.json
tests/data/mapf/: at_goal.json  circle.json  simple1.json  simple1b.json  swap2.json  swap4.json
tests/data/robots/: tb3-1.json
tests/data/species/: turtlebot3_burger.json
tests/data/task_allocation/itags_problem_inputs/: all_agents_lost.json  all_sol.json  best_change.json  duration_change.json  full_run.json  load_tasks.json  lost_agent_test.json  new_agent_test.json  part.json  precedence_change.json  reqs_down.json  reqs_up.json  reqs_up_and_down.json  survivor_problem0.json  test_survivor.json  traits_down.json  traits_up.json  traits_up_and_down.json  worst_change.json
tests/data/task_allocation/robot_traits_matrix_reduction/: custom.json  maximum.json  minimum.json  one_of_each.json  product.json  summation.json
tests/data/task_planning/pddl_parser/: domain_header.pddl  problem_header.pddl  requirements.pddl
tests/data/task_planning/pddl_parser/durative_actions/duration/: empty.pddl  equal.pddl  inequality.pddl
tests/data/task_planning/pddl_parser/functions/numeric/: empty.pddl  multiple_functions_multiple_parameters.pddl  single_function_multiple_type_parameters.pddl  single_function_no_parameters.pddl  single_function_single_type_parameters.pddl
tests/data/task_planning/pddl_parser/functions/object/: object_function.pddl
tests/data/task_planning/pddl_parser/functions/predicates/: empty.pddl  multiple_predicates_multiple_parameters.pddl  single_predicate_multiple_type_parameters.pddl  single_predicate_no_parameters.pddl  single_predicate_single_type_parameters.pddl
tests/data/task_planning/pddl_parser/objects/: empty_constants.pddl  multiple_type_constants.pddl  single_type_constants.pddl
tests/data/task_planning/pddl_parser/types/: complex.pddl  empty.pddl  single.pddl  single_parent.pddl  two.pddl  two_parent.pddl  unknown_parent.pddl
tests/include/: CMakeLists.txt  mock_deterministic_milp_scheduler.hpp  mock_ditags.hpp  mock_grstaps_problem_inputs.hpp  mock_incremental_task_allocation_node.hpp  mock_itags_problem_inputs.hpp  mock_normalized_schedule_quality.hpp  mock_pddl_parser.hpp  scheduling_setup.hpp
tests/src/: CMakeLists.txt  mock_ditags.cpp  mock_normalized_schedule_quality.cpp  scheduling_setup.cpp  test_allocation_percentage_remaining.cpp  test_astar.cpp  test_breadth_first_search.cpp  test_cbs.cpp  test_configuration_base.cpp  test_custom_hashings.cpp  test_depth_first_search.cpp  test_deterministic_milp_scheduler.cpp  test_ditags.cpp  test_ditags_experiment_proof.cpp  test_ditags_experiments.cpp  test_grstaps_problem_inputs.cpp  test_incremental_allocation_edge_applier.cpp  test_itags.cpp  test_itags_problem_inputs.cpp  test_mutable_priority_queue.cpp  test_normalized_schedule_quality.cpp  test_ompl_motion_planner.cpp  test_pddl_duration.cpp  test_pddl_function.cpp  test_pddl_headers.cpp  test_pddl_objects.cpp  test_pddl_requirements.cpp  test_pddl_type.cpp  test_pgm_environment.cpp  test_point_graph_a_star.cpp  test_point_graph_environment.cpp  test_point_graph_motion_planner.cpp  test_problem_translator.cpp  test_quick_deterministic_milp_scheduler.cpp  test_robot_trait_matrix_reduction.cpp  test_sampled_point_graph_environment.cpp  test_sampled_point_graph_motion_planner.cpp  test_species.cpp  test_stochastic_milp_scheduler.cpp  test_time_extended_task_allocation_quality.cpp  (+5 more)
(+289 files in other folders)
